--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <app-header></app-header>
+
+<div class="">
+  <app-menu></app-menu>
+</div>
+
 <div class="container">
   <router-outlet></router-outlet>
 </div>
