--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <app-header></app-header>
 
-<div class="">
-  <app-menu></app-menu>
-</div>
-
-<div class="container">
-  <router-outlet></router-outlet>
+<div class="row">
+  <div class="col-md-3">
+    <app-menu></app-menu>
+  </div>
+  <div class="col-md-9">
+    <router-outlet></router-outlet>
+  </div>
 </div>
