--- a/src/app/elements/header/header.component.html
+++ b/src/app/elements/header/header.component.html
@@ -1,11 +1,12 @@
 <header class="site-header">
   <div class="site-identity">
-    <h1><a href="#">Angular Training</a></h1>
+    <h1><a href="#" translate="header.title"></a></h1>
   </div>
   <div class="site-title">
-    <p>Name : Ech-cherrate Nour El Houda</p>
+    <p>Ech-cherrate Nour El Houda</p>
   </div>
   <nav class="site-language">
-      <ng-select [items]="languages" bindLabel="name" bindValue="id"></ng-select>
+      <ng-select [items]="languages" bindLabel="name" bindValue="id" ></ng-select>
   </nav>
+
 </header>
