--- a/src/app/elements/menu/menu.component.html
+++ b/src/app/elements/menu/menu.component.html
@@ -3,7 +3,7 @@
   <div class="bg-light border-right" id="sidebar-wrapper">
     <div class="list-group list-group-flush">
       <a routerLink="/home" class="list-group-item list-group-item-action">Home</a>
-      <a href="#" class="list-group-item list-group-item-action ">Manage users</a>
+      <a routerLink="/users" class="list-group-item list-group-item-action ">Manage users</a>
     </div>
   </div>
 
