--- a/src/app/elements/header/header.component.html
+++ b/src/app/elements/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="site-identity">
-    <h1><a href="#" translate="header.title"></a></h1>
+    <h1><a href="#" [translate]="'header.title'"></a></h1>
   </div>
   <div class="site-title">
     <p>Ech-cherrate Nour El Houda</p>
