--- a/src/app/elements/menu/menu.component.html
+++ b/src/app/elements/menu/menu.component.html
@@ -2,8 +2,8 @@
 
   <div class="bg-light border-right" id="sidebar-wrapper">
     <div class="list-group list-group-flush">
-      <a routerLink="/home" class="list-group-item list-group-item-action">Home</a>
-      <a routerLink="/users" class="list-group-item list-group-item-action ">Manage users</a>
+      <a routerLink="/home" class="list-group-item list-group-item-action" [translate]="'sidebar.home'">Home</a>
+      <a routerLink="/users" class="list-group-item list-group-item-action" [translate]="'sidebar.manageUsers'">Manage users</a>
     </div>
   </div>
 
