--- a/src/app/elements/pages/users/list/list.component.html
+++ b/src/app/elements/pages/users/list/list.component.html
@@ -43,16 +43,16 @@
     <nav class="d-flex justify-content-center">
       <ul class="pagination">
         <li class="page-item">
-          <a class="page-link" href="#" aria-label="Previous" (click)="previousPage()">
+          <a class="page-link" routerLink="/users" aria-label="Previous" (click)="previousPage()">
             <span aria-hidden="true">&laquo;</span>
             <span class="sr-only"></span>
           </a>
         </li>
         <li class="page-item" *ngFor="let page of totalPages">
-          <a class="page-link" href="#" (click)="getPage(page)">{{ page }}</a>
+          <a class="page-link" routerLink="/users" routerLinkActive="active-page" (click)="getPage(page)">{{ page }}</a>
         </li>
         <li class="page-item">
-          <a class="page-link" href="#" aria-label="Next" (click)="nextPage()">
+          <a class="page-link" routerLink="/users" aria-label="Next" (click)="nextPage()">
             <span aria-hidden="true">&raquo;</span>
             <span class="sr-only"></span>
           </a>
