--- a/src/app/elements/header/header.component.html
+++ b/src/app/elements/header/header.component.html
@@ -1,9 +1,9 @@
 <header class="site-header">
   <div class="site-identity">
-    <h1><a href="#" [translate]="'header.title'"></a></h1>
+    <h1><a href="#">{{ 'header.title' | translate }}</a></h1>
   </div>
   <div class="site-title">
-    <p>Ech-cherrate Nour El Houda</p>
+    <p>{{ 'header.description' | translate }}</p>
   </div>
   <nav class="site-language">
       <ng-select [(ngModel)]="selectedLanguage"
