--- a/src/app/elements/pages/users/list/list.component.html
+++ b/src/app/elements/pages/users/list/list.component.html
@@ -1,20 +1,25 @@
 <div class="users w-100">
   <div class="row w-100" *ngIf="users">
-    <h2 class="" [translate]="'user.title'">List of Users</h2>
+
+    <h2 class="">{{ 'pages.manage_users.title' | translate }}</h2>
+
     <div class="text-end mb-3">
-      <button type="button" class="btn btn-success" [translate]="'user.addUser'"></button>
+      <button type="button" class="btn btn-success" routerLink="/addUser">
+        {{ 'pages.manage_users.addUser' | translate }}</button>
     </div>
+
     <table class="table table-striped">
       <thead>
       <tr>
-        <th scope="col" [translate]="'user.id'">ID</th>
-        <th scope="col" [translate]="'user.avatar'">Avatar</th>
-        <th scope="col" [translate]="'user.firstName'">First Name</th>
-        <th scope="col" [translate]="'user.lastName'">Last Name</th>
-        <th scope="col" [translate]="'user.email'">Email Address</th>
-        <th scope="col">-</th>
+        <th scope="col">{{ 'pages.manage_users.id' | translate }}</th>
+        <th scope="col">{{ 'pages.manage_users.avatar' | translate }}</th>
+        <th scope="col">{{ 'pages.manage_users.firstName' | translate }}</th>
+        <th scope="col">{{ 'pages.manage_users.lastName' | translate }}</th>
+        <th scope="col">{{ 'pages.manage_users.email' | translate }}</th>
+        <th scope="col"> - </th>
       </tr>
       </thead>
+
       <tbody>
       <tr *ngFor="let user of users; index as i">
         <th scope="row">{{ user.id }}</th>
@@ -27,12 +32,13 @@
         <td>
           <div ngbDropdown class="dropdown">
             <!-- <span (click)="delete(i)"><i class="fa fa-trash btn btn-danger"></i></span> -->
-            <button ngbDropdownToggle class="btn btn-light dropdown-toggle-text-only" type="button" id="dropdownMenuButton1" aria-expanded="false" [translate]="'user.action'">
-              Action
-            </button>
+            <button ngbDropdownToggle class="btn btn-light dropdown-toggle-text-only" type="button" id="dropdownMenuButton1" aria-expanded="false">
+              {{ 'pages.manage_users.action' | translate }}</button>
             <ul ngbDropdownMenu aria-labelledby="dropdownMenuButton1">
-              <li><a ngbDropdownItem routerLink="/users" [translate]="'user.update'">Update</a></li>
-              <li><a ngbDropdownItem (click)="delete(i)" [translate]="'user.delete'">Delete</a></li>
+              <li><a ngbDropdownItem routerLink="/users">
+                {{ 'pages.manage_users.update' | translate }}</a></li>
+              <li><a ngbDropdownItem (click)="delete(i)">
+                {{ 'pages.manage_users.delete' | translate }}</a></li>
             </ul>
           </div>
         </td>
