--- a/src/app/elements/menu/menu.component.scss
+++ b/src/app/elements/menu/menu.component.scss
@@ -2,8 +2,7 @@
   min-height: 100vh;
 }
 
-#sidebar-wrapper .sidebar-heading {
-  padding: 0.875rem 1.25rem;
+#sidebar-wrapper {
   font-size: 1.2rem;
 }
 
