--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
 <app-header></app-header>
-
-<div class="row">
-  <div class="col-md-3">
+<div class="d-flex flex-row">
+  <div class="p-2">
     <app-menu></app-menu>
   </div>
-  <div class="col-md-9">
+  <div class="p-2" id="page_content">
     <router-outlet></router-outlet>
   </div>
 </div>
