--- a/src/app/elements/menu/menu.component.html
+++ b/src/app/elements/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex" id="wrapper">
+<div class="d-inline-flex" id="wrapper">
   <div class="bg-light border-right" id="sidebar-wrapper">
     <div class="list-group list-group-flush">
       <a routerLink="/home" class="list-group-item list-group-item-action">
@@ -8,7 +8,3 @@
     </div>
   </div>
 </div>
-
-
-
-
