--- a/src/app/pages/users/list/list.component.html
+++ b/src/app/pages/users/list/list.component.html
@@ -55,7 +55,10 @@
           </a>
         </li>
         <li class="page-item" *ngFor="let page of totalPages">
-          <a class="page-link" routerLink="/users" routerLinkActive="active-page" (click)="getPage(page)">{{ page }}</a>
+          <a class="page-link" routerLink="/users"
+             [class.active-link]="currentPage === page"
+             routerLinkActive="active-page"
+             (click)="getPage(page)">{{ page }}</a>
         </li>
         <li class="page-item">
           <a class="page-link" routerLink="/users" aria-label="Next" (click)="nextPage()">
